--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,41 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
   min-height: 100vh;
+  background-color: aqua; 
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-around;
+
+  align-items: center; 
+  
 }
 
-.App-link {
-  color: #61dafb;
+
+.tweet{
+  height: 300px;
+  width: 300px;
+background-color: white;
+border-radius: 30px;
+display: flex;
+flex-direction: column; 
+justify-content: space-around;
+align-items: center;
+color: black; 
+ 
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h1{
+ color: green; 
+}
+
+h3{
+  color: black; 
+}
+
+.red{
+  color: white; 
+  size: 30px;
+}
+.yellow{
+
+  color: pink; 
+  size: 45px; 
 }
